# autoskill

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
autoskill/: __init__.py  cli.py
config/: config.py
core/: code_quality.py  isolation_manager.py  plugin_manager.py  skill_executor.py  skill_fingerprint.py  skill_generator.py  skill_persistence.py  skill_registry.py
examples/: basic_usage.py  langchain_integration.py
integrations/: __init__.py  complete_demo.py  langchain_example.py  langchain_tool.py  toolkit.py  tools.py
llm/: llm_config.py  reflection_engine.py  skill_creator.py
templates/: base_skill.yaml  data_analysis.yaml  template_registry.py
tests/: test_code_quality.py  test_end_to_end.py  test_isolation_manager.py  test_langchain_integration.py  test_skill_agent.py
utils/: dependency_manager.py  validator.py
